@@ -1,5 +1,11 @@
 # NetworkInterceptor &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="https://hangar.papermc.io/SlimeDog/NetworkInterceptor">![download-on-hangar](https://user-images.githubusercontent.com/17748923/187102194-00e910e6-ee8e-42cb-bfe1-d2f9e657ef4b.png)</a> <a href="https://www.spigotmc.org/resources/53351/">![download-on-spigot](https://user-images.githubusercontent.com/17748923/187102011-b72e0f1d-ba74-4cb2-a69e-46f48cb364b5.png)</a>
 
+⚠️ SecurityManager was terminally deprecated in Java 17. This affects NetworkInterceptor on all platforms. Fortunately, the issue is easily resolved, without change to NetworkInterceptor. Add the following specification to server/proxy start-up
+
+        java -Djava.security.manager=allow
+        
+This specification was verified to be compatible with Java 17.0.1 and later, through Java 22.0.2.
+
 ### Overview
 **NetworkInterceptor** detects and (optionally) blocks outgoing network connections. Some examples include:
 * Generally required:
@@ -25,14 +31,9 @@ For more detailed analysis of network traffic, we recommend trying [Wireshark](h
 All **NetworkInterceptor** commands are accessible at the console, and in-game with appropriate permissions (default OP). Tab-completion is supported for all commands.
 
 ### Version Support
-**NetworkInterceptor** 3.1.5 is certified Spigot 1.13.2, 1.14.4, 1.15.2, 1.16.5, and 1.17.1, 1.18.2 and 1.19.4; Paper 1.16.5, 1.17.1, 1.18.2 and 1.19.3; BungeeCord 1.18-1615 and 1.19-x; Waterfall 1.19-x, and Velocity 3.1.0.
-
-**NetworkInterceptor** may or may not work on previous Spigot releases or other non-Spigot variants.
-
-Note: Only certified releases are supported.
+See [Version Support](https://github.com/SlimeDog/NetworkInterceptor/wiki/Version-Support) for supported versions. Only certified releases are supported.
 
 ### The Wiki
-**NetworkInterceptor** is completely documented on The Wiki. Please start there when you have questions.
-https://github.com/SlimeDog/NetworkInterceptor/wiki
+**NetworkInterceptor** is completely documented on [The Wiki](https://github.com/SlimeDog/NetworkInterceptor/wiki). Please start there when you have questions.
 
 And we'll never forget: **NetworkInterceptor 1.0** was made with ❤️ by Luck. All credit for the original design and implementation belongs to him.
